--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/academic"]
 	path = themes/academic
 	url = https://github.com/XHPlus/hugo-academic
+[submodule "public"]
+	path = public
+	url = https://github.com/XHPlus/XHPlus.github.io.git
